FindBugs: use Integer.valueOf()